# IlyaElevrin-FreePLC

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  freeplc_gui.py  main.cpp
experiments/: test_logic.cpp  test_python_logic.py
include/: gates.h  gui.h  ld_program.h  logic_element.h  plcio.h  relay_manager.h
src/: gates.cpp  gui.cpp  ld_program.cpp  plcio.cpp  relay_manager.cpp
